Upgrade to JDK 17 (#283)
Signed-off-by: Thomas Segismont <tsegismont@gmail.com>